# ro-Control

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.tr.md  SECURITY.md  SUPPORT.md  task.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
data/completions/: _ro-control  ro-control.bash  ro-control.fish
data/helpers/: ro-control-helper.sh.in
data/icons/: io.github.projectroasd.rocontrol.desktop  io.github.projectroasd.rocontrol.metainfo.xml  ro-control.desktop  ro-control.metainfo.xml
data/polkit/: com.github.AcikKaynakGelistirmeToplulugu.rocontrol.policy  io.github.ProjectRoASD.rocontrol.policy.in
docs/: ARCHITECTURE.md  BUILDING.md  DESIGN.md  FEDORA.md  RELEASE.md
docs/man/: ro-control.1
i18n/: README.md  ro-control_de.ts  ro-control_en.ts  ro-control_es.ts  ro-control_tr.ts
packaging/rpm/: README.md  ro-control.spec
scripts/: dev-watch.sh  fedora-bootstrap.sh
src/: main.cpp
src/backend/monitor/: cpumonitor.cpp  cpumonitor.h  gpumonitor.cpp  gpumonitor.h  rammonitor.cpp  rammonitor.h
src/backend/nvidia/: detector.cpp  detector.h  installer.cpp  installer.h  updater.cpp  updater.h  versionparser.cpp  versionparser.h
src/backend/system/: capabilityprobe.cpp  capabilityprobe.h  commandrunner.cpp  commandrunner.h  dnfmanager.cpp  dnfmanager.h  languagemanager.cpp  languagemanager.h  polkit.cpp  polkit.h  sessionutil.cpp  sessionutil.h  systeminfoprovider.cpp  systeminfoprovider.h  uipreferencesmanager.cpp  uipreferencesmanager.h
src/cli/: cli.cpp  cli.h
src/qml/: Main.qml
src/qml/components/: ActionButton.qml  DetailRow.qml  InfoBadge.qml  SectionPanel.qml  SidebarMenu.qml  StatCard.qml  StatusBanner.qml  qmldir
src/qml/pages/: DriverPage.qml  MonitorPage.qml  SettingsPage.qml  qmldir
tests/: CMakeLists.txt  test_cli.cpp  test_detector.cpp  test_driver_page.cpp  test_metadata.cpp  test_monitor.cpp  test_preferences.cpp  test_system_integration.cpp  test_updater.cpp
